--- a/main.tex
+++ b/main.tex
@@ -139,8 +139,8 @@
     \textbf{\Large SANJAY KANAKKOT VISWANATHAN} \\ \vspace{4pt}
     \small \faPhone* \texttt{+61 448716345} \hspace{1pt} $|$
     \hspace{1pt} \faEnvelope \hspace{2pt} \texttt{sanjay.kanakkot@gmail.com} \hspace{1pt} $|$ 
-    \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {sanjay-k-v}}} \hspace{1pt} $|$
-    \hspace{1pt} \faGithubSquare \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {sanjay-kv}}}}
+    \hspace{1pt} \faLinkedin \hspace{2pt} \texttt{\href{https://www.linkedin.com/in/sanjay-k-v/}{\myuline {LinkedIn}}} \hspace{1pt} $|$
+    \hspace{1pt} \faGithubSquare \hspace{2pt}\texttt{{\href{https://github.com/sanjay-kv}{\myuline {GitHub}}}}
     \hspace{1pt} \faInfoCircle \hspace{2pt}\texttt{{\href{http://sanjaykv.com}{\myuline {sanjaykv.com}}}}
      
 \end{center}
@@ -148,15 +148,7 @@
 %-----------EXPERIENCE-----------
 \section{EXPERIENCE}
   \resumeSubHeadingListStart
-    \resumeSubheading
-      {Recode Hive}{May. 2021 -- Current}
-      {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
-      \resumeItemListStart
-        \resumeItem{Launched ebook and courses. Scaled social media presence to \textbf{13k Followers in 6 months.}}
-        \resumeItem{\textbf{Delivered 50+ talks} on ML, Data Science, Open source contributions and taught 2000+ students, Cloud Advocate. }
-        \resumeItem{\textbf{Highlights}:
-            Guest speaker for\href{https://adaptconvention.com/speakers/}{\myuline { Adapt Convention (2020,21)}}, GDG Germany, Girlscript- Rourkela, Google CS events.}
-      \resumeItemListEnd
+
     \resumeSubheading
       {Truuth}{February  2023 – July 2023}
       {Data Scientist Intern }{Sydney, Australia}
@@ -164,67 +156,72 @@
         \resumeItem{Improved data quality reporting by 90 percent,  through implementing adaptive image enhancement models and enhanced visual feature checks.
 }
         \resumeItem{Optimized text format checks within the organization by Azure tools; enhanced accuracy rates by 50 Percent. }
+
+        \resumeItem{Achieved a 99 percent accuracy rate in distinguishing between authentic and fake documents using ML algorithms.
+}
       \resumeItemListEnd
 
 
     \resumeSubheading
-      {Larsen and Toubro Infotech Ltd. - LTI}{Aug. 2018 -- May. 2021}
+      {Larsen and Toubro Infotech Ltd. - LTI}{August 2018 -- May 2021}
       {Software Engineer}{Bangalore, India}
       \resumeItemListStart
-        \resumeItem{Worked with Cross-functional projects, developed interactive dashboards and reports in SAP C4C for clients.}
-        \resumeItem{Successfully delivered end-to-end data-driven remediation project using predictive analytics, resulting in 20 percent increase in efficiency.}
-        \resumeItem{ Improved team productivity by 20 percent through creating inventory tool for Retail assets management.}
-
+        \resumeItem{Liaised with Cross-functional projects, developed interactive dashboards and reports in SAP C4C for clients.}
+        \resumeItem{Led a team of 4 and worked on Power BI data modeling with SAP raw data for internal projects.}
+        \resumeItem{Completed 5 Projects and created an inventory tool which improved team productivity by \textbf{20 percent.}}
+        \resumeItem{Developed over 110+ B2B and 20+ A2A interfaces for migration projects in an agile environment. }
     \resumeItemListEnd
 
   \resumeSubHeadingListEnd
 
+%-----------VOLUNTEER /OTHER EXPERIENCE-----------
+\section{VOLUNTEER EXPERIENCE}
+  \resumeSubHeadingListStart
+    \resumeSubheading
+      {Recode Hive}{May 2021 -- Current}
+      {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
+      \resumeItemListStart
+        \resumeItem {Launched books and courses, scaled social media presence, Delivered 50+ talks on ML, Data Science,
+ and open-source contributions, and taught 2000+ students.}
+        \resumeItem{Collaborated with GitHub Campus Expert  & Google Crowdsource program to conduct 45 workshops on ML. }
+        \resumeItem{\textbf{Highlights}:
+            Guest speaker for Adapt Convention, GDG Germany, Girlscript- Rourkela, Google CS events.}
+      \resumeItemListEnd
+    \resumeSubHeadingListEnd
+%-------------------------------------------  
 
 %-----------PROJECTS-----------
 
 \section{PROJECTS}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Stack Overflow survey data Analysis}} {Sept. 2019 -- Mar. 2021}
+          {\textbf{Stack Overflow survey data Analysis}} {Sept 2019 -- Mar 2021}
           \resumeItemListStart
-            \resumeItem{Analysed Stack Overflow \textbf{survey data set of 3 years}, and found highest paid job, programming languages, etc as insights.}
-            \resumeItem{Accomplished predicting what caused job satisfaction, Growth of language using Machine Learning which accomplished in fast paced and agile Environment.. 
-            \href{https://github.com/sanjay-kv/Stackoverflow-Analysis}{\myuline {GitHub Link}}}
+            \resumeItem{Analysed Stack Overflow survey data set of 3 years, and found highest paid job, programming languages.}
+            \resumeItem{Accomplished predicting what caused job satisfaction and growth of programming language using ML
+            \href{https://github.com/sanjay-kv/Stackoverflow-Analysis}{\myuline {GitHub. Link}}}
           \resumeItemListEnd
   
     \resumeSubHeadingListEnd
     
 
-%-----------VOLUNTEER EXPERIENCE-----------
-\section{VOLUNTEER EXPERIENCE}
- \begin{itemize}[leftmargin=0in, label={}]
-    \small{\item{
-     \textbf{GitHub Campus Expert:} {Completed 6 Weeks of \href{https://githubcampus.expert/sanjay-kv/}
-{\myuline {training}} from GitHub Team and hosted 10 workshops so far.}\vspace{2pt} \\
-     \textbf{Google Crowdsource Influencer:} {Received \href{https://crowdsource.google.com/about/blog/community-spotlight-friendship/}
-{\myuline {recognition}} award for \textbf{mentoring} and build local communities.}\\
-         
- \end{itemize}
-
-%-------------------------------------------    
+  
 %-----------EDUCATION-----------
 \section {EDUCATION}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Macquarie University}{Feb. 2021 -- June. 2023}
+      {Macquarie University}{February  2021 -- June 2023}
       {Master of Data Science}{North Ryde, NSW, Australia}
       	\resumeItemListStart
-    	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data}
-  \resumeItem {\textbf{Achievements}: Helped GitHub to  launch \href{https://education.github.com/globalcampus/exchange/}
-{\myuline {GitHub community exchange program}}}\\
-\textbf{Google Explore ML Facilitator}, Worked with Product Team, \href{https://rsvp.withgoogle.com/events/explore-ml-with-crowdsource-workshops-on-air/facilitators}
-{\myuline {Hosted 10 workshops.}}}
+    	\resumeItem {\textbf{Coursework}: Database, Machine Learning, Big Data Analysis, Statistics, Reporting, Data Architecture, NLP.}
+  \resumeItem {\textbf{Achievements}: Collaborated with the GitHub team to launch the GitHub community exchange program.}\\
+\resumeItem{\textbf{Selected as Google Explore ML Facilitator} and worked closely with product team to deliver ML workshops.}
         \resumeItemListEnd
 
   
   \resumeSubHeadingListStart
     \resumeSubheading
-      {SRM Institute of Science and Technology}{June. 2014 -- May. 2018}
+      {SRM Institute of Science and Technology}{June 2014 -- May 2018}
       {Bachelor in Technology(B.Tech) - Computer Science - CGPA 7.8/10}{Chennai, India}
 
   \resumeSubHeadingListEnd
@@ -237,59 +234,59 @@
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} {   Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS(EC2, S3), Excel, Tableau,  } \\
-     \textbf{Hobbies/ Other skills:} {SEO, Blogging, Leadership, Public Speaking, Opensource contribution.}\
+     \textbf{Hobbies/ Other skills:} {SEO, Blogging, Leadership, Public Speaking, Opensource contribution, Design.}\
      
     }}
  \end{itemize}
 
 %-------------------------------------------    
 %-----------PROGRAMMING SKILLS-----------
-\section{CERTIFICATIONS}
- \begin{itemize}[leftmargin=0in, label={}]
-    \small{\item{
-           \resumeItemListStart
-            \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification.}
-         \resumeItem{LinkedIn Learning certification on \textbf{diversity, inclusion, and belonging}. }
-          \resumeItemListEnd    
-    }}
- \end{itemize}
+%--\section{CERTIFICATIONS}
+ %--\begin{itemize}[leftmargin=0in, label={}]
+    %--\small{\item{
+       %--    \resumeItemListStart
+          %--  \resumeItem{Google Analytics certification Beginner and intermediate, Google Data Studio certification.}
+         %--\resumeItem{LinkedIn Learning certification on \textbf{diversity, inclusion, and belonging}. }
+         %-- \resumeItemListEnd    
+   %-- }}
+ %--\end{itemize}
 
 
 %-------------------------------------------
 
 %-----------EDUCATION-----------
-\section {REFERENCES}
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Mike Simpson }{Worked during Aug. 2023 -- Feb, June}
-      {CEO, Co-founder at Truuth}{Sydney, Australia}
-      	\resumeItemListStart
-    	\resumeItem {\textbf{Email}: Mike.simpson@truuth.id}
-      	\resumeItem {\textbf{Mob No}: +61 0432545256}
-  \\
+%\section {REFERENCES}
+ %- \resumeSubHeadingListStart
+ %-   \resumeSubheading
+  %-    {Mike Simpson }{Worked during Aug. 2023 -- Feb, June}
+  %-    {CEO, Co-founder at Truuth}{Sydney, Australia}
+  %-    	\resumeItemListStart
+  %-  	\resumeItem {\textbf{Email}: Mike.simpson@truuth.id}
+   %-   	\resumeItem {\textbf{Mob No}: +61 0432545256}
+  %-\\
   
-        \resumeItemListEnd
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Pulkit Jain (Ex-colleague)}{Worked during Aug. 2018 -- May. 2021}
-      {Senior Business Analyst at Uber}{Bangalore, India}
-      	\resumeItemListStart
-    	\resumeItem {\textbf{Email}: pulkitj@uber.com}
-      	\resumeItem {\textbf{Mob No}: +91 9940628145}
+    %-    \resumeItemListEnd
+  %-\resumeSubHeadingListStart
+    %-\resumeSubheading
+      %-{Pulkit Jain (Ex-colleague)}{Worked during Aug. 2018 -- May. 2021}
+      %-{Senior Business Analyst at Uber}{Bangalore, India}
+      %-	\resumeItemListStart
+    	%-\resumeItem {\textbf{Email}: pulkitj@uber.com}
+      	%-\resumeItem {\textbf{Mob No}: +91 9940628145}
   
-        \resumeItemListEnd
+        %-\resumeItemListEnd
 
   
-  \resumeSubHeadingListStart
-    \resumeSubheading
-      {Iswarya Balakrishnan}{April. 2020 -- Sept. 2021}
-      {Strategic Partner Development Manager, Google}{Bangalore, India}
-	\resumeItemListStart
-    	\resumeItem {\textbf{Email}: ibalakrishnan@google.com}
-      	\resumeItem {\textbf{Mob No}: +91 6366256630}
+  %-\resumeSubHeadingListStart
+    %-\resumeSubheading
+      %-{Iswarya Balakrishnan}{April. 2020 -- Sept. 2021}
+      %-{Strategic Partner Development Manager, Google}{Bangalore, India}
+	%-\resumeItemListStart
+    %-	\resumeItem {\textbf{Email}: ibalakrishnan@google.com}
+      %-	\resumeItem {\textbf{Mob No}: +91 6366256630}
   
-        \resumeItemListEnd
-  \resumeSubHeadingListEnd
+        %-\resumeItemListEnd
+  %-\resumeSubHeadingListEnd
 
 %
 \end{document}
