Changes to the bold letters

--- a/main.tex
+++ b/main.tex
@@ -153,21 +153,22 @@
       {Truuth}{February  2023 – July 2023}
       {Data Scientist Intern }{Sydney, Australia}
       \resumeItemListStart
-        \resumeItem{Improved data quality reporting by 90 percent,  through implementing adaptive image enhancement models and enhanced visual feature checks.
+        \resumeItem{Improved data quality reporting by \textbf{90 percent},  through implementing adaptive image enhancement models and enhanced visual feature checks.
 }
-        \resumeItem{Optimized text format checks within the organization by Azure tools; enhanced accuracy rates by 50 Percent. }
+        \resumeItem{Optimized text format checks within the organization by \textbf{Azure tools}; enhanced accuracy rates by 50 Percent. }
 
-        \resumeItem{Achieved a 99 percent accuracy rate in distinguishing between authentic and fake documents using ML algorithms.
+        \resumeItem{Achieved a \textbf{99 percent accuracy} rate in distinguishing between authentic and fake documents using ML algorithms.
 }
       \resumeItemListEnd
 
 
     \resumeSubheading
       {Larsen and Toubro Infotech Ltd. - LTI}{August 2018 -- May 2021}
-      {Software Engineer}{Bangalore, India}
+      {Software Engineer/ SAP Data Consultant
+}{Bangalore, India}
       \resumeItemListStart
         \resumeItem{Liaised with Cross-functional projects, developed interactive dashboards and reports in SAP C4C for clients.}
-        \resumeItem{Led a team of 4 and worked on Power BI data modeling with SAP raw data for internal projects.}
+        \resumeItem{Led a team of 4 and worked on \textbf{Power BI} data modeling with SAP raw data aligned with business goals.}
         \resumeItem{Completed 5 Projects and created an inventory tool which improved team productivity by \textbf{20 percent.}}
         \resumeItem{Developed over 110+ B2B and 20+ A2A interfaces for migration projects in an agile environment. }
     \resumeItemListEnd
@@ -181,9 +182,9 @@
       {Recode Hive}{May 2021 -- Current}
       {Founder/ Head of Content (\href{https://recodehive.com}{\myuline {recodehive.com}})}{Kochi, India}
       \resumeItemListStart
-        \resumeItem {Launched books and courses, scaled social media presence, Delivered 50+ talks on ML, Data Science,
- and open-source contributions, and taught 2000+ students.}
-        \resumeItem{Collaborated with GitHub Campus Expert  & Google Crowdsource program to conduct 45 workshops on ML. }
+        \resumeItem {Launched books and courses, scaled social media presence, Delivered \textbf{50+ talks} on ML, Data Science,
+ and open-source contributions, and taught \textbf{2000+ students}.}
+        \resumeItem{Collaborated with GitHub Campus Expert  & Google Crowdsource program to conducted \textbf{45 workshops on ML}. }
         \resumeItem{\textbf{Highlights}:
             Guest speaker for Adapt Convention, GDG Germany, Girlscript- Rourkela, Google CS events.}
       \resumeItemListEnd
@@ -234,7 +235,7 @@
     \small{\item{
      \textbf{Programming/language:} { Python, Git, HTML, CSS, MySQL, SQL}\vspace{2pt} \\
      \textbf{Tools/ Frameworks:} {   Numpy, Pandas, Sklearn, PowerBI, Google Analytics, AWS(EC2, S3), Excel, Tableau,  } \\
-     \textbf{Hobbies/ Other skills:} {SEO, Blogging, Leadership, Public Speaking, Opensource contribution, Design.}\
+     \textbf{Hobbies/ Other skills:} {SEO, Blogging, Leadership, Public Speaking, Opensource contribution .}\
      
     }}
  \end{itemize}
